--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve ",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node index.js",
+    "server": "nodemon index.js --ignore client"
   },
   "dependencies": {
     "core-js": "^2.6.5",
     "iview": "^3.0.1",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
@@ -31,6 +34,7 @@
     "typescript": "^3.4.3",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-iview": "^1.0.6",
+    "vue-cli-plugin-moment": "^0.1.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
